<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sellerId"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Seller_Profile">

    <LinearLayout
        android:id="@+id/Seller_Profile"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">
...
            android:onClick="clickMenu"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/sellerOrders"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:backgroundTint="@color/white"
            android:text="@string/order"
            android:onClick="viewOrders"
            android:textAllCaps="false"
...
            android:text="Order"
            android:onClick="viewOrders"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/Account_Profile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:backgroundTint="@color/white"
            android:onClick="clickAccount"
            android:text="Account"
            android:textAllCaps="false"
            android:textColor="@color/black" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
