...
    // com.example.uscdrinkdoor.Seller Profile:
    <string name="seller_name">Seller</string>
    <string name="seller_id">Seller ID:</string>
    <string name="seller_email">Email</string>
    <string name="address">Address</string>
    <string name="menu">Menu</string>
    <string name="order">Orders</string>
    <string name="wallet">Wallet</string>
    <string name="logoff">Sign Off</string>

    // com.example.uscdrinkdoor.User Profile:
    <string name="user_name">User</string>
    <string name="phone">Phone</string>
...
