...
            android:layout_height="398dp"
            android:padding="20dp"
            android:text="Revenue: "
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/function"
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:layout_below="@id/map">

            <Button
                android:id="@+id/Home"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:backgroundTint="@color/white"
                android:onClick="clickHome"
                android:text="Home"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/sellerMenu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:backgroundTint="@color/white"
                android:onClick="clickMenu"
                android:text="Menu"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/userOrder"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:backgroundTint="@color/white"
                android:onClick="clickOrder"
                android:text="Order"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/Account_Profile"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:backgroundTint="@color/white"
                android:onClick="clickAccount"
                android:text="Account"
                android:textAllCaps="false"
                android:textColor="@color/black" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
